--- a/style.css
+++ b/style.css
@@ -17,15 +17,31 @@ body {
 .container {
   max-width: 600px;
   margin: 0 auto;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
+.logo{
+  width: 40px;
+  padding: 2px;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+
+}
+
+.logo-container {
+  margin-right: 10px;
+  
+}
+
 h1 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.5;
 }
@@ -43,7 +59,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   font-weight: 400;
 }
 a {
@@ -61,18 +77,19 @@ a {
 }
 
 button {
-  padding: 10px 20px;
-  background-color: #1b4af4;
-  color: #fff;
+  padding: 10px 10px;
+  background-color: #6790e2;
+  color: #292734;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  margin: 5px;
+  margin-bottom: 5px;
   font-weight: bold;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color: #0c53e2;
 }
 
 footer {
@@ -87,6 +104,7 @@ footer {
   border-radius: 10px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
+
 
 .progress-bar {
   height: 10px;
@@ -109,7 +127,7 @@ footer {
 .space-between {
   display: flex;
   justify-content: center;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
 .space-between-small {
@@ -208,5 +226,9 @@ footer p {
 #file-selector{
   font-size: small;
   font-weight: 600;
+}
+
+#checking-relays{
+  font-weight: 400;
 }
 
